Fixed and improved gitcommits.php
Fixing a regression (missing % at the end of SQL ILIKE statement) that
caused commits with -beta and -rc tags not displaying.
Improving the renderer so that the MDL filter will be applied.

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@
     background-color: white;
     border: 1px solid #efefef;
     padding: 0.5em;
+    white-space: pre-wrap;
 }
 
 .path-local-dev .generalbox {
