Fixing the SQL error when using initials filter

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,8 @@
     margin-right: 1ex;
 }
 
-.path-local-dev .initialbar a {
+.path-local-dev .initialbar a,
+.path-local-dev .initialbar strong {
     margin-left: 0.3em;
 }
 
